--- a/package.json
+++ b/package.json
@@ -30,5 +30,18 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.3",
     "vite": "^6.2.0"
-  }
+  },
+  "description": "<br>",
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/komalchoudhary-dev/Ice-Factory-Frontend.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/komalchoudhary-dev/Ice-Factory-Frontend/issues"
+  },
+  "homepage": "https://github.com/komalchoudhary-dev/Ice-Factory-Frontend#readme"
 }
