--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/roboto": "^5.2.5",
     "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.8.4",
     "framer-motion": "^12.5.0",
