--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@fontsource/roboto": "^5.2.5",
     "@tailwindcss/vite": "^4.1.3",
-    "axios": "^1.8.4",
+    "axios": "^1.9.0",
     "framer-motion": "^12.5.0",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
@@ -20,6 +20,7 @@
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
+    "recharts": "^2.15.3",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
