--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.9.0",
     "framer-motion": "^12.5.0",
+    "icons": "^1.0.0",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
-    "react": "^19.0.0",
+    "react": "^19.1.0",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
